--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Todo List</title>
+    <script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link rel="stylesheet" href="bootstrap-theme.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
+
+<div id="container">
+    <h1>To-Do List</h1>
+    <input type="text">
+    <ul>
+        <li><span>x</span> Go to Work</li>
+        <li><span>x</span> Feed Gia</li>
+        <li><span>x</span> Learn JavaScript</li>
+    </ul>
+</div>
 
 
 
     
 <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
-<script src="main.js"></script>    
+<script src="assets/js/main.js"></script>    
 </body>
 </html>
