--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Todo List</title>
     <script type="text/javascript" src="assets/js/lib/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" type="text/css" href="bootstrap.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="bootstrap-theme.css">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -15,11 +15,11 @@
 
 <div id="container">
     <h1>To-Do List</h1>
-    <input type="text">
+    <input type="text" placeholder="Add New Todo">
     <ul>
-        <li><span>x</span> Go to Work</li>
-        <li><span>x</span> Feed Gia</li>
-        <li><span>x</span> Learn JavaScript</li>
+        <li><span><i class="fa fa-trash"></i></span> Go to Work</li>
+        <li><span><i class="fa fa-trash"></i></span> Feed Gia</li>
+        <li><span><i class="fa fa-trash"></i></span> Learn JavaScript</li>
     </ul>
 </div>
 
